docs/config_examples/ingress/ingress-with-vs-ip-cidr.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # Virtual server IP address with CIDR
    virtual-server.f5.com/ip: 10.8.0.4/31
  name: ingress-svc-foo
  namespace: default
spec:
  rules:
    - host: foo.com
      http:
        paths:
          - backend:
              service:
                name: svc-1
                port:
                  number: 80
            path: /foo
            pathType: ImplementationSpecific
  tls:
    - secretName: foo-secret
