docs/config_examples/ingress/single-service-tls-ingress-2.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: VirtualServerWithTLSProfile-example-ingress
spec:
  tls:
  - hosts:
    - mysite.foo.com
    #Referencing this secret in an Ingress tells the Ingress controller to 
    #secure the channel from the client to the load balancer using TLS
    secretName: ingress-example-secret-VirtualServerWithTLSProfile
  rules:
    - host: mysite.example.com
      http:
      # path to Service from URL
        paths:
        - path: /
          backend:
            serviceName: service1
            servicePort: 80
